stateDiagram-v2
    [*] --> Applicant
    Applicant --> Review: submit evidence
    Review --> Active: approve
    Review --> Rejected: deny with reason
    Active --> Restricted: risk or nonconformance
    Restricted --> Active: remediate
    Active --> Suspended: serious breach
    Suspended --> Retired: remove or exit
    Active --> Retired: planned exit
    Retired --> [*]

